--- a/templates/base.html
+++ b/templates/base.html
@@ -76,10 +76,10 @@
                 <div class="footer-nav-content">
                     <nav>
                         <ul>
-                            <li><a href="/about">{% trans "О нас" %}</a></li>
-                            <li><a href="/product">{% trans "Продукция" %}</a></li>
-                            <li><a href="/publications">{% trans "Публикации" %}</a></li>
-                            <li><a href="/recipes">{% trans "Рецепты" %}</a></li>
+                            <li><a href="about">{% trans "О нас" %}</a></li>
+                            <li><a href="product">{% trans "Продукция" %}</a></li>
+                            <li><a href="publications">{% trans "Публикации" %}</a></li>
+                            <li><a href="recipes">{% trans "Рецепты" %}</a></li>
                         </ul>
                     </nav>
                     <div class="footer-link">
