--- a/templates/product-inner.html
+++ b/templates/product-inner.html
@@ -2,36 +2,94 @@
 {% load static %}
 
 {% block content %}
-<section class="product recipes-inner">
-    <div class="container">
-        <div class="product__content">
-            <div class="product-left">
-                <h1>{{ recipe.name }}</h1>
-            </div>
-            <div class="product-right">
-                <div class="about-company-all">
-                    <div class="crumb">
-                        <a href="#">Главная</a>
-                        <a href="#">Продукция</a>
-                        <span> Колбасы</span>
-                    </div>
-                    <div class="recipes__content">
-                        <div class="recipes__content-block">
-                            <img src="{{ recipe.image.url }}" alt="{{ recipe.name }}"/>
-                            <p class="p">{{ recipe.description }}</p>
-                        </div>
-                        <div class="recipes__content-block">
-                            <h2 class="h2">Ingredients</h2>
-                            <p>{{ recipe.ingredients }}</p>
-                        </div>
-                        <div class="recipes__content-block">
-                            <h2 class="h2">Directions</h2>
-                            <p>{{ recipe.directions }}</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+<section class="product">
+  <div class="container">
+    <div class="product__content">
+      <div class="product-left">
+        <h1>Продукция</h1>
+      </div>
+      <div class="product-right">
+        <div class="crumb">
+          <a href="{% url 'home' %}">Главная</a>
+          <a href="{% url 'product' %}">Продукция</a>
+          <span> Колбасы</span>
         </div>
+      </div>
     </div>
+  </div>
+</section>
+
+<section class="parallax" style="background: url('{% static 'img/jpg/slider-background.jpg' %}')">
+  <div class="paralax-img"><img src="{% static 'img/png/img9.png' %}" alt="Parallax Image 1"/></div>
+  <div class="paralax-img2"><img src="{% static 'img/png/img10.png' %}" alt="Parallax Image 2"/></div>
+  <div class="parallax-heading">
+    <h2>{{ category.name }}</h2>
+  </div>
+</section>
+
+<section class="product__inner">
+  <div class="container">
+    <div class="product-right">
+      <div class="product__inner-content">
+        <div class="product__inner-img"><img src="{{ product.image.url }}" alt="{{ product.name }}"/></div>
+        <div class="productinner-heading-all">
+          <div class="product__inner-heading">
+            <h2>{{ product.name }}</h2>
+            <p>{{ product.description }}</p>
+          </div>
+          <div class="product__inner-heading">
+            <h2>Состав</h2>
+            <p>{{ product.composition }}</p>
+          </div>
+          <div class="product__inner-heading">
+            <h2>Рецепты для {{ product.name }}</h2>
+            <div class="product__inner-card-all">
+              {% for recipe in recipes %}
+                <div class="product__inner-cards">
+                  <div class="product__inner-card">
+                    <div class="product__inner-card-img">
+                      <img src="{{ recipe.image.url }}" alt="{{ recipe.name }}" data-mh="my-group2"/>
+                    </div>
+                    <div class="product__inner-card-heading">
+                      <p>{{ recipe.name }}</p>
+                      <p>{{ recipe.description }}</p>
+                    </div>
+                    <a href="#"></a>
+                  </div>
+                </div>
+              {% empty %}
+                <p>Нет доступных рецептов для этого продукта.</p>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="about-product">
+  <div class="container">
+    <div class="product-sausage">
+      <div class="product-right">
+        <div class="product__card-all">
+          {% for related_product in related_products %}
+            <div class="product__card-inner">
+              <div class="product__card">
+                <div class="product__card-img">
+                  <img src="{{ related_product.image.url }}" alt="{{ related_product.name }}"/>
+                </div>
+                <h4 data-mh="my-group">{{ related_product.name }}</h4>
+                <a href="{% url 'product_detail' related_product.id %}">Подробнее</a>
+              </div>
+            </div>
+          {% empty %}
+            <p>Нет связанных продуктов.</p>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 {% endblock %}
