--- a/templates/recipes-inner.html
+++ b/templates/recipes-inner.html
@@ -3,51 +3,60 @@
 
 {% block content %}
 <section class="product recipes-inner">
-    <div class="container">
-        <div class="product__content">
-            <div class="product-left">
-                <h1>Рецепты</h1>
-            </div>
-            <div class="product-right">
-                <div class="about-company-all">
-                    <div class="crumb"><a href="#">Главная</a><a href="#">Продукция</a><span> Колбасы</span></div>
-                    <div class="recipes__content">
-                        <div class="recipes__content-block">
-                            <h2 class="h2">{{ recipes.name }}</h2>
-                            <img src="{{ recipes.image.url }}" alt="{{ recipes.name }}"/>
-                            <p class="p">{{ recipes.description }}</p>
-                        </div>
-                        <div class="recipes__content-block">
-                            <h2 class="h2">Ingredients</h2>
-                            <p>{{ recipes.ingredients }}</p>
-                        </div>
-                        <div class="recipes__content-block">
-                            <h2 class="h2">Directions</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <div class="container">
+    <div class="product__content">
+      <div class="product-left">
+        <h1>Рецепты</h1>
+      </div>
+      <div class="product-right">
+        <div class="about-company-all">
+          <div class="crumb">
+            <a href="{% url 'home' %}">Главная</a>
+            <a href="{% url 'product' %}">Продукция</a>
+            <span> Колбасы</span>
+          </div>
+          <div class="recipes__content">
+            {% for recipe in recipes %}
+              <div class="recipes__content-block">
+                <h2 class="h2">{{ recipe.name }}</h2>
+                <img src="{{ recipe.image.url }}" alt="{{ recipe.name }}"/>
+                <p class="p">{{ recipe.description }}</p>
+              </div>
+              <div class="recipes__content-block">
+                <h2 class="h2">Ингредиенты</h2>
+                <p>{{ recipe.ingredients|linebreaks }}</p>
+              </div>
+              <div class="recipes__content-block">
+                <h2 class="h2">Инструкция</h2>
+                <p>{{ recipe.directions|linebreaks }}</p>
+              </div>
+            {% endfor %}
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
+
 <section class="about-product">
-    <div class="container">
-        <div class="product-sausage">
-            <div class="product-right">
-                <div class="product__card-all">
-                    {% for product in recipes.products.all %}
-                    <div class="product__card-inner">
-                        <div class="product__card">
-                            <div class="product__card-img" data-mh="my-group3">
-                                <img src="{{ product.image.url }}" alt="{{ product.name }}"/>
-                            </div>
-                            <h4 data-mh="my-group">{{ product.name }}</h4><a href="#"></a>
-                        </div>
-                    </div>
-                    {% endfor %}
+  <div class="container">
+    <div class="product-sausage">
+      <div class="product-right">
+        <div class="product__card-all">
+          {% for related_product in related_products %}
+            <div class="product__card-inner">
+              <div class="product__card">
+                <div class="product__card-img" data-mh="my-group3">
+                  <img src="{{ related_product.image.url }}" alt="{{ related_product.name }}"/>
                 </div>
+                <h4 data-mh="my-group">{{ related_product.name }}</h4>
+                <a href="{% url 'product_detail' related_product.id %}"></a>
+              </div>
             </div>
+          {% endfor %}
         </div>
+      </div>
     </div>
+  </div>
 </section>
 {% endblock %}
